# file-toolbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-26-about-tab.md  2026-06-26-invoice-recognition.md  2026-06-26-packaging-and-release.md
docs/superpowers/specs/: 2026-06-26-about-tab-design.md  2026-06-26-invoice-recognition-design.md  2026-06-26-packaging-and-release-design.md
file_toolbox/: __init__.py  __main__.py  gui_entry.py
file_toolbox/cli/: invoice_cmd.py  main.py  mkdir_cmd.py  op_parser.py  pdf_cmd.py  rename_cmd.py  replace_cmd.py
file_toolbox/common/: base_operation.py  file_utils.py  history.py  loggable.py  metadata.py  op_schema.py  paths.py  shortcuts.py
file_toolbox/core/: batch_mkdir.py  batch_rename.py  rename_template.py
file_toolbox/core/batch_pdf/: __init__.py  constants.py  engine_manager.py  pdf_utils.py  service.py
file_toolbox/core/batch_pdf/converters/: __init__.py  excel_converter.py  image_converter.py  ppt_converter.py  word_converter.py
file_toolbox/core/batch_replace/: __init__.py  file_converter.py  service.py  types.py
file_toolbox/core/batch_replace/handlers/: __init__.py  excel_handler.py  text_handler.py  word_handler.py
file_toolbox/core/invoice/: __init__.py  dedupe.py  service.py  types.py
file_toolbox/core/invoice/exporters/: __init__.py  excel_exporter.py  json_exporter.py
file_toolbox/core/invoice/parsers/: __init__.py  base.py  ofd_parser.py  pdf_parser.py  xml_parser.py  zip_parser.py
file_toolbox/gui/: batch_mixin.py  main_window.py  updater_widget.py
file_toolbox/gui/controllers/: __init__.py  invoice_controller.py  mkdir_controller.py  operation_params.py  pdf_controller.py  qt_prompter.py
file_toolbox/gui/dialogs/: __init__.py  about_tab.py  history_dialog.py  invoice_tab.py  mkdir_tab.py  pdf_tab.py  rename_tab.py  replace_tab.py
file_toolbox/gui/workers/: __init__.py  pdf_worker.py
file_toolbox/updater/: __init__.py  downloader.py  errors.py  replacer.py  versions.py
scripts/: FileToolbox.spec  build_exe.py  bump_version.py  extract_changelog.py  release.py  sync_mirrors.py  update_deps.py
tests/: conftest.py  test_about_gui.py  test_batch_mkdir.py  test_batch_pdf.py  test_batch_rename.py  test_batch_replace.py  test_bump_version.py  test_cli.py  test_common.py  test_engine_manager.py  test_file_utils.py  test_history.py  test_image_converter.py  test_invoice_cli.py  test_invoice_controller.py  test_invoice_dedupe.py  test_invoice_exporters.py  test_invoice_gui.py  test_invoice_ofd_parser.py  test_invoice_pdf_parser.py  test_invoice_service.py  test_invoice_types.py  test_invoice_xml_parser.py  test_invoice_zip_parser.py  test_metadata.py  test_mkdir_controller.py  test_mkdir_gui.py  test_op_parser.py  test_op_schema.py  test_operation_params.py  test_pdf_controller.py  test_pdf_converters.py  test_pdf_gui.py  test_pdf_service_cancel.py  test_pdf_service_del_gc.py  test_pdf_utils.py  test_pdf_worker.py  test_release_interactive.py  test_rename_template.py  test_replace_handlers.py  (+9 more)
tests/fixtures/invoice/: sample_einvoice.xml
