[project]
name = "file-toolbox"
version = "0.1.7"
description = "批量文件工具箱:重命名、建文件夹、生成 PDF、内容替换"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pypdf>=4.0",
    "Pillow>=10.0",
    "PyMuPDF>=1.23",
    "chardet>=5.0",
    'pywin32>=306; platform_system == "Windows"',
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
invoice = ["pdfplumber>=0.11", "openpyxl>=3.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10", "reportlab>=4.0", "packaging>=24.0", "pyinstaller>=6.0", "types-pywin32>=0.3"]

[project.scripts]
file-toolbox = "file_toolbox.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["file_toolbox*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"file_toolbox/gui/generated/*" = ["E", "F", "W", "I"]
"file_toolbox/cli/*" = ["B008"]  # typer.Option/Argument 作为默认参数是惯用模式
"scripts/*" = ["B008"]
"tests/*" = ["E402", "B017"]  # 测试中 E402(importorskip 前置)、B017(测异常基类)合理

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
# check_untyped_defs:即使函数无注解也检查其函数体(捕获真实类型错误)。
# 不开 disallow_untyped_defs(会强制全仓补注解,247 错误,收益递减)。
check_untyped_defs = true
files = ["file_toolbox"]

[[tool.mypy.overrides]]
module = ["fitz", "fitz.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true

# Designer 生成的 UI 代码:自动生成、含 Qt 动态属性,不强制类型检查(会被重新生成覆盖)。
[[tool.mypy.overrides]]
module = ["file_toolbox.gui.generated.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["file_toolbox"]
omit = [
    "file_toolbox/gui/generated/*",
    "file_toolbox/__main__.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
